fixes unscored student test history color contrast

--- a/webapp/src/main/webapp/src/app/groups/results/group-results.component.less
+++ b/webapp/src/main/webapp/src/app/groups/results/group-results.component.less
@@ -1,6 +1,6 @@
 .filters {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 3fr minmax(max-content, 1fr);
   gap: 15px;
   align-items: center;
 }
