--- a/webapp/src/main/webapp/src/app/school-grade/results/school-results.component.less
+++ b/webapp/src/main/webapp/src/app/school-grade/results/school-results.component.less
@@ -1,6 +1,6 @@
 .filters {
   display: grid;
-  grid-template-columns: 1fr auto auto;
+  grid-template-columns: 2fr minmax(max-content, 1fr) minmax(max-content, 1fr);
   gap: 15px;
   align-items: center;
 }
